--- a/PartyPalApp/PartyPalApp.csproj
+++ b/PartyPalApp/PartyPalApp.csproj
@@ -63,12 +63,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="EventHomePage.xaml">
+	  <MauiXaml Update="MVVM\Views\EventHomePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-
-	  <Folder Include="MVVM\ViewModels\" />
-	  <Folder Include="MVVM\Views\" />
 	</ItemGroup>
 
 </Project>
